--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,20 @@
 /** GENERAL STYLE START */
+html * {
+  box-sizing: border-box;
+}
 
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Open Sans", "Helvetica Neue", sans-serif, sans-serif;
+  font-size: 18px;
+  display: grid;
+  grid-template-rows: auto 200px 80px;
+  max-width: 1440px;
+  margin: 0 auto;
+}
+
+body a {
+  text-decoration: none;
+}
 /** GENERAL STYLE END */
 
 /** MAIN SECTION STYLE START */
