--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,5 @@
 /** GENERAL STYLE START */
+
 html * {
   box-sizing: border-box;
 }
@@ -14,14 +15,62 @@ body {
 
 body a {
   text-decoration: none;
+  color: #fff;
 }
+
 /** GENERAL STYLE END */
 
+/** @media STYLE START */
+
+@media screen and (max-width: 840px) {
+  #main-section {
+    height: 100vh;
+    width: 820px;
+    background-position: bottom 0px left auto;
+  }
+
+  #nav-menu,
+  #banner-4 {
+    display: none;
+  }
+}
+
+/** @media STYLE END */
+
 /** MAIN SECTION STYLE START */
+
+#main-section {
+  background-image: url("../images/your_verse_hero.jpg");
+  background-position: bottom 0px left 0px;
+  background-repeat: no-repeat;
+  background-size: auto;
+  text-align: center;
+  color: white;
+  font-weight: 100;
+  height: 69vh;
+  max-width: 1440px;
+  min-width: 1024px;
+  min-height: 550px;
+}
 
 /** MAIN SECTION STYLE END */
 
 /** NAVIGATION STYLE START */
+
+#nav-menu {
+  background: linear-gradient(
+    rgb(153, 149, 149) 0%, rgb(110, 110, 110) 45%, rgb(80, 80, 80) 50%, rgb(120, 120, 120) 98%);
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  border-radius: 3px;
+  box-shadow: 0.5px 0.5px 1px 0.2px rgb(58, 57, 57);
+  height: 36px;
+  width: 980px;
+  margin: 17px auto;
+  font-size: 12px;
+  font-weight: 200;
+}
 
 /** NAVIGATION STYLE END */
 
