--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -95,13 +95,71 @@ body a {
   margin: 0 10px;
 }
 
+#nav-bar label input {
+  position: relative;
+  width: 126px;
+  height: 22px;
+  border-radius: 12px;
+  border: 1px solid transparent;
+  border-bottom: 0.5px solid rgb(156, 155, 155);
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.758);
+  background-color: rgba(255, 255, 255, 0.096);
+  background: url("../images/search-icon-wt.png") top 5px left 7px no-repeat;
+  background-size: 12px;
+  padding: 1px 0 1px 23px;
+  transition: all 0.3s ease-in-out;
+}
+
+#nav-bar label input:focus {
+  background-color: #fff !important;
+  background: url("../images/search-icon-bk.png") top 3px left 4px no-repeat;
+  background-size: 17px;
+  width: 170px;
+  outline: none;
+  border: none;
+}
+
 /** NAVIGATION STYLE END */
 
 /** MAIN TEXT STYLE START */
 
+#main-text {
+  font-size: 32px;
+}
+
+#main-text h1 {
+  font-size: 2em;
+  margin-top: 160px;
+  margin-bottom: 20px;
+}
+
+#main-text p:first-of-type {
+  font-size: 1em;
+  line-height: 1.4em;
+  width: 800px;
+  margin: 25px auto;
+}
+
+#main-text p:nth-of-type(2) {
+  font-size: 0.8em;
+  width: 600px;
+  margin: 25px auto;
+}
+
+#main-text p:nth-of-type(2) i {
+  font-size: 1em;
+  margin-left: 6px;
+}
+
+#main-text p a:hover {
+  text-decoration: underline;
+}
+
 /** MAIN TEXT STYLE END */
 
 /** BANNERS STYLE START */
+
+
 
 /** BANNERS STYLE END */
 
