--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -43,7 +43,7 @@ body a {
   background-image: url("../images/your_verse_hero.jpg");
   background-position: bottom;
   background-repeat: no-repeat;
-  background-size: auto;
+  background-size: cover;
   text-align: center;
   color: white;
   font-weight: 100;
