Updated style.css as stickler and linter required

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -5,7 +5,7 @@ html * {
 }
 
 body {
-  font-family: BlinkMacSystemFont, "Segoe UI", Roboto, "Open Sans", "Helvetica Neue", sans-serif, sans-serif;
+  font-family: BlinkMacSystemFont, "Segoe UI", Roboto, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 18px;
   display: grid;
   grid-template-rows: auto 200px 80px;
@@ -58,8 +58,13 @@ body a {
 /** NAVIGATION STYLE START */
 
 #nav-menu {
-  background: linear-gradient(
-    rgb(153, 149, 149) 0%, rgb(110, 110, 110) 45%, rgb(80, 80, 80) 50%, rgb(120, 120, 120) 98%);
+  background:
+    linear-gradient(
+      rgb(153, 149, 149) 0%,
+      rgb(110, 110, 110) 45%,
+      rgb(80, 80, 80) 50%,
+      rgb(120, 120, 120) 98%
+    );
   display: flex;
   position: relative;
   justify-content: space-evenly;
@@ -75,9 +80,14 @@ body a {
 }
 
 span.fab.fa-apple {
-    background: linear-gradient( rgb(246, 247, 247) 0%, rgb(243, 244, 245) 40%, rgb(191, 190, 190) 70%);
-    -webkit-background-clip: text;
-    -webkit-text-fill-color: transparent;
+  background:
+    linear-gradient(
+      rgb(246, 247, 247) 0%,
+      rgb(243, 244, 245) 40%,
+      rgb(191, 190, 190) 70%
+    );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 #nav-menu li {
@@ -97,10 +107,11 @@ span.fab.fa-apple {
   text-decoration: none;
   cursor: pointer;
   border-image: url(../images/btn-hover-1.png) 0 2 0 1 fill;
-  background: url(../images/btn-hover-2.png) 0px 0px repeat-x,
-  url(../images/btn-hover-3.png) 100% 0px repeat-y,
-  url(../images/btn-hover-4png) 0px 0px repeat-y,
-  rgba(0, 0, 0, 0.4);
+  background:
+    url(../images/btn-hover-2.png) 1px 1px repeat-x,
+    url(../images/btn-hover-3.png) 100% 1px repeat-y,
+    url(../images/btn-hover-4png) 1px 1px repeat-y,
+    rgba(0, 0, 0, 0.4);
 }
 
 #nav-menu label {
@@ -116,7 +127,6 @@ span.fab.fa-apple {
   border: 1px solid transparent;
   border-bottom: 0.5px solid rgb(156, 155, 155);
   box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.758);
-  background-color: rgba(255, 255, 255, 0.096);
   background: url("../images/search-icon-wt.png") top 5px left 7px no-repeat;
   background-size: 12px;
   padding: 1px 0 1px 23px;
@@ -124,8 +134,7 @@ span.fab.fa-apple {
 }
 
 #nav-bar label input:focus {
-  background-color: #fff !important;
-  background: url("../images/search-icon-bk.png") top 5px left 7px no-repeat;
+  background: url("../images/search-icon-bk.png") #fff top 5px left 7px no-repeat;
   background-size: 12px;
   width: 170px;
   outline: none;
@@ -133,6 +142,85 @@ span.fab.fa-apple {
 }
 
 /** NAVIGATION STYLE END */
+
+/** BANNERS STYLE START */
+
+#banners {
+  display: grid;
+  grid-template-columns: repeat(4, auto);
+  justify-content: start;
+  text-align: center;
+  margin-top: 2px;
+  min-width: 1024px;
+}
+
+#banners a {
+  width: 25vw;
+  max-width: 360px;
+  min-width: 256px;
+}
+
+#banner-1 {
+  background: url("../images/promo_iphone5s.jpg") center no-repeat;
+  background-size: auto;
+}
+
+#banner-2 {
+  background: url("../images/promo_iphone5c.jpg") center no-repeat;
+  background-size: auto;
+}
+
+#banner-3 {
+  background: url("../images/promo_30_years.jpg") center no-repeat;
+  background-size: auto;
+}
+
+#banner-4 {
+  background: url("../images/promo_supplier_responsibility.jpg") center no-repeat;
+  background-size: auto;
+}
+
+/** BANNERS STYLE END */
+
+/** FOOTER STYLE START */
+
+#footer {
+  font-family:
+    "Lucida Sans",
+    "Lucida Sans Regular",
+    "Lucida Grande",
+    "Lucida Sans Unicode",
+    Geneva,
+    Verdana,
+    sans-serif;
+  display: grid;
+  grid-template-columns: repeat(2, 490px);
+  width: 980px;
+  margin: 0 auto;
+}
+
+#footer a {
+  color: rgb(28, 173, 209);
+}
+
+#main-text p a {
+  color: transparent;
+  text-shadow: 0 0 1px #fff;
+}
+
+#footer a:hover {
+  text-decoration: underline;
+}
+
+#footer div {
+  font-size: 10px;
+  line-height: 2.5em;
+  margin-top: 22px;
+  font-weight: 400 !important;
+  color: rgb(170, 168, 168);
+}
+
+/** FOOTER STYLE END */
 
 /** MAIN TEXT STYLE START */
 
@@ -170,82 +258,12 @@ span.fab.fa-apple {
   cursor: pointer;
 }
 
-#main-text p a {
-  color: transparent;
-  text-shadow: 0 0 1px #fff;
-}
-
 #main-text p a:hover {
   border-bottom: 1px outset #fff;
   display: inline-block;
 }
 
 /** MAIN TEXT STYLE END */
-
-/** BANNERS STYLE START */
-
-#banners {
-  display: grid;
-  grid-template-columns: repeat(4, auto);
-  justify-content: start;
-  text-align: center;
-  margin-top: 2px;
-  min-width: 1024px;
-}
-
-#banners a {
-  width: 25vw;
-  max-width: 360px;
-  min-width: 256px;
-}
-
-#banner-1 {
-  background: url("../images/promo_iphone5s.jpg") center no-repeat;
-  background-size: auto;
-}
-#banner-2 {
-  background: url("../images/promo_iphone5c.jpg") center no-repeat;
-  background-size: auto;
-}
-#banner-3 {
-  background: url("../images/promo_30_years.jpg") center no-repeat;
-  background-size: auto;
-}
-#banner-4 {
-  background: url("../images/promo_supplier_responsibility.jpg") center no-repeat;
-  background-size: auto;
-}
-
-/** BANNERS STYLE END */
-
-/** FOOTER STYLE START */
-
-#footer {
-  font-family: "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
-    "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  display: grid;
-  grid-template-columns: repeat(2, 490px);
-  width: 980px;
-  margin: 0 auto;
-}
-
-#footer a {
-  color: rgb(28, 173, 209);
-}
-
-#footer a:hover {
-  text-decoration: underline;
-}
-
-#footer div {
-  font-size: 10px;
-  line-height: 2.5em;
-  margin-top: 22px;
-  font-weight: 400 !important;
-  color: rgb(170, 168, 168);
-}
-
-/** FOOTER STYLE END */
 
 /** FOOTER MENU STYLE START */
 
